--- a/src/MarsExploration.WebService/MarsExploration.WebService.csproj
+++ b/src/MarsExploration.WebService/MarsExploration.WebService.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MarsExploration.Core\MarsExploration.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
