Some quick context and object changes

--- a/src/MarsExploration.WebUI/appsettings.json
+++ b/src/MarsExploration.WebUI/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MarsExplorationApi": {
+    "Urls": [
+      "http://localhost:5010",
+      "https://localhost:5011"
+    ]
+  }
 }
