--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,12 +13,12 @@
             "args": [],
             "cwd": "${workspaceFolder}/src/MarsExploration.WebService",
             "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            "launchBrowser": {
+                "enabled": false
             },
             "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "ASPNETCORE_URLS": "http://localhost:5010;https://localhost:5011"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
