--- a/src/MarsExploration.WebUI/MarsExploration.WebUI.csproj
+++ b/src/MarsExploration.WebUI/MarsExploration.WebUI.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarsExploration.Core\MarsExploration.Core.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
   </ItemGroup>
 
 </Project>
