--- a/src/MarsExploration.WebUI/appsettings.Development.json
+++ b/src/MarsExploration.WebUI/appsettings.Development.json
@@ -5,5 +5,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "MarsExplorationApi": {
+    "Urls": [
+      "http://localhost:5010",
+      "https://localhost:5011"
+    ]
   }
 }
